# Less

./: .gitignore  README.md  aar_files.txt  build.gradle.kts  build.txt  build2.txt  build_err.txt  build_err2.txt  build_err3.txt  build_out.txt  build_output.txt  callosum.yaml  clean_gradle.py  compile_errors.txt  entities.json  find_device_id.py  local.properties.example  old_cmake.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: tinymusician_base.onnx
app/src/main/assets/lottie/: pipeline_flow.json  welcome_wave.json
app/src/main/cpp/: CMakeLists.txt  alert_detector.cpp  alert_detector.h  audio_engine.cpp  audio_engine.h  environment_classifier.cpp  environment_classifier.h  gsc_filter.cpp  gsc_filter.h  less_jni.cpp  masking_engine.cpp  masking_engine.h  noise_suppressor.cpp  noise_suppressor.h  thermal_manager.cpp  thermal_manager.h  vision_synth.cpp  vision_synth.h
app/src/main/cpp/training/: adapter_trainer.cpp  adapter_trainer.h  data_pipeline.cpp  data_pipeline.h  snr_predictor.cpp  snr_predictor.h  training_jni.cpp
app/src/main/java/com/less/audio/: BluetoothAudioRouter.kt  LessApplication.kt  LessTileService.kt  MainActivity.kt  NativeAudioBridge.kt  VisionMusicService.kt
app/src/main/java/com/less/audio/camera/: VisionCameraClient.kt
app/src/main/java/com/less/audio/debug/: MockGlassesController.kt
app/src/main/java/com/less/audio/ml/: FeedbackLogger.kt  GemmaConductor.kt  GemmaDownloader.kt  PersonalizationWorker.kt  SceneHeuristicMapper.kt  TinyMusicianInference.kt
app/src/main/java/com/less/audio/profiling/: ProfilingService.kt  ProfilingSessionManager.kt
app/src/main/java/com/less/audio/telemetry/: TelemetryManager.kt
app/src/main/java/com/less/audio/training/: OvernightTrainingScheduler.kt  TrainingWorker.kt
app/src/main/java/com/less/audio/ui/: AcousticPresets.kt  DashboardVisualizer.kt  OnboardingWizard.kt
app/src/main/jniLibs/arm64-v8a/: README.md
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_less_tile.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: themes.xml
python/: tinymusician_base.onnx.data  train_tinymusician.py
scripts/: export_yolo.py
